// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Snapshots renders a tooltip with a child element 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  padding: 8px;
  background-color: rgba(0,0,0,.85);
  -webkit-animation: animation-fmkrp5;
  animation: animation-fmkrp5;
  -webkit-animation-duration: 150ms;
  animation-duration: 150ms;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  color: #ffffff;
  font-size: 13px;
  margin: 4px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
}

.emotion-0 a {
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    className="emotion-0 emotion-1"
    role="tooltip"
  >
    <div>
      I'm being hovered
    </div>
  </div>
</div>
`;

exports[`Tooltip Snapshots renders a tooltip with a different transformOrigin 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  padding: 8px;
  background-color: rgba(0,0,0,.85);
  -webkit-animation: animation-fmkrp5;
  animation: animation-fmkrp5;
  -webkit-animation-duration: 150ms;
  animation-duration: 150ms;
  -webkit-animation-timing-function: ease-out;
  animation-timing-function: ease-out;
  color: #ffffff;
  font-size: 13px;
  margin: 4px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
}

.emotion-0 a {
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    className="emotion-0 emotion-1"
    role="tooltip"
  >
    <div>
      Delete
    </div>
  </div>
</div>
`;
